// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`props should render color 1`] = `
.emotion-0 {
  box-sizing: border-box;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  font-family: var(--wp-g2-font-family);
  font-size: var(--wp-g2-font-size);
  font-weight: var(--wp-g2-font-weight);
  margin: 0;
  border-radius: var(--wp-g2-control-border-radius);
  box-shadow: 0 0 0 1px var(--wp-g2-surface-border-color) inset;
  cursor: default;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 20px;
  line-height: 1;
  max-width: 120px;
  padding: 0 4px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  background: var(--wp-g2-red-rgba-20);
  color: var(--wp-g2-color-background-red-text);
}

@media (prefers-reduced-motion) {
  .emotion-0 {
    -webkit-transition: none!important;
    transition: none!important;
  }
}

[data-system-ui-reduced-motion-mode="true"] .emotion-0 {
  -webkit-transition: none!important;
  transition: none!important;
}

[data-system-ui-color-blind-mode="true"] .emotion-0 {
  background-image: linear-gradient(45deg,var(--wp-g2-red-rgba-10) 25%,transparent 25%,transparent 75%,var(--wp-g2-red-rgba-10) 75%,var(--wp-g2-red-rgba-10)),linear-gradient(-45deg,var(--wp-g2-red-rgba-10) 25%,transparent 25%,transparent 75%,var(--wp-g2-red-rgba-10) 75%,var(--wp-g2-red-rgba-10));
  background-size: 10px 10px;
}

.emotion-1 {
  box-sizing: border-box;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  font-family: var(--wp-g2-font-family);
  font-size: var(--wp-g2-font-size);
  font-weight: var(--wp-g2-font-weight);
  margin: 0;
  display: block;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  color: var(--wp-g2-color-text);
  line-height: var(--wp-g2-font-line-height-base);
  color: currentColor;
  font-size: calc((13 / 13) * var(--wp-g2-font-size));
  font-weight: var(--wp-g2-font-weight);
  line-height: 1;
  display: block;
  padding: 3px 0;
}

@media (prefers-reduced-motion) {
  .emotion-1 {
    -webkit-transition: none!important;
    transition: none!important;
  }
}

[data-system-ui-reduced-motion-mode="true"] .emotion-1 {
  -webkit-transition: none!important;
  transition: none!important;
}

<span
  class="components-tag wp-components-tag ic-7lu7e0 ic-otytyz ic-192yz5d emotion-0"
  data-g2-c16t="true"
  data-g2-component="Tag"
>
  <span
    class="components-truncate wp-components-truncate components-text wp-components-text ic-7u3orf ic-1m45iq3 ic-192yz5d emotion-1"
    data-g2-c16t="true"
    data-g2-component="Text"
  >
    Status
  </span>
</span>
`;

exports[`props should render correctly 1`] = `
.emotion-0 {
  box-sizing: border-box;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  font-family: var(--wp-g2-font-family);
  font-size: var(--wp-g2-font-size);
  font-weight: var(--wp-g2-font-weight);
  margin: 0;
  border-radius: var(--wp-g2-control-border-radius);
  box-shadow: 0 0 0 1px var(--wp-g2-surface-border-color) inset;
  cursor: default;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 20px;
  line-height: 1;
  max-width: 120px;
  padding: 0 4px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  background: var(--wp-g2-dark-gray-rgba-20);
  color: var(--wp-g2-color-background-dark-gray-text);
}

@media (prefers-reduced-motion) {
  .emotion-0 {
    -webkit-transition: none!important;
    transition: none!important;
  }
}

[data-system-ui-reduced-motion-mode="true"] .emotion-0 {
  -webkit-transition: none!important;
  transition: none!important;
}

.emotion-1 {
  box-sizing: border-box;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  font-family: var(--wp-g2-font-family);
  font-size: var(--wp-g2-font-size);
  font-weight: var(--wp-g2-font-weight);
  margin: 0;
  display: block;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  color: var(--wp-g2-color-text);
  line-height: var(--wp-g2-font-line-height-base);
  color: currentColor;
  font-size: calc((13 / 13) * var(--wp-g2-font-size));
  font-weight: var(--wp-g2-font-weight);
  line-height: 1;
  display: block;
  padding: 3px 0;
}

@media (prefers-reduced-motion) {
  .emotion-1 {
    -webkit-transition: none!important;
    transition: none!important;
  }
}

[data-system-ui-reduced-motion-mode="true"] .emotion-1 {
  -webkit-transition: none!important;
  transition: none!important;
}

<span
  class="components-tag wp-components-tag ic-7lu7e0 ic-otytyz ic-192yz5d emotion-0"
  data-g2-c16t="true"
  data-g2-component="Tag"
>
  <span
    class="components-truncate wp-components-truncate components-text wp-components-text ic-7u3orf ic-1m45iq3 ic-192yz5d emotion-1"
    data-g2-c16t="true"
    data-g2-component="Text"
  >
    Status
  </span>
</span>
`;

exports[`props should render display 1`] = `
.emotion-0 {
  box-sizing: border-box;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  font-family: var(--wp-g2-font-family);
  font-size: var(--wp-g2-font-size);
  font-weight: var(--wp-g2-font-weight);
  margin: 0;
  border-radius: var(--wp-g2-control-border-radius);
  box-shadow: 0 0 0 1px var(--wp-g2-surface-border-color) inset;
  cursor: default;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 20px;
  line-height: 1;
  max-width: 120px;
  padding: 0 4px;
  display: block;
  background: var(--wp-g2-dark-gray-rgba-20);
  color: var(--wp-g2-color-background-dark-gray-text);
}

@media (prefers-reduced-motion) {
  .emotion-0 {
    -webkit-transition: none!important;
    transition: none!important;
  }
}

[data-system-ui-reduced-motion-mode="true"] .emotion-0 {
  -webkit-transition: none!important;
  transition: none!important;
}

.emotion-1 {
  box-sizing: border-box;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  font-family: var(--wp-g2-font-family);
  font-size: var(--wp-g2-font-size);
  font-weight: var(--wp-g2-font-weight);
  margin: 0;
  display: block;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  color: var(--wp-g2-color-text);
  line-height: var(--wp-g2-font-line-height-base);
  color: currentColor;
  font-size: calc((13 / 13) * var(--wp-g2-font-size));
  font-weight: var(--wp-g2-font-weight);
  line-height: 1;
  display: block;
  padding: 3px 0;
}

@media (prefers-reduced-motion) {
  .emotion-1 {
    -webkit-transition: none!important;
    transition: none!important;
  }
}

[data-system-ui-reduced-motion-mode="true"] .emotion-1 {
  -webkit-transition: none!important;
  transition: none!important;
}

<span
  class="components-tag wp-components-tag ic-7lu7e0 ic-otytyz ic-192yz5d emotion-0"
  data-g2-c16t="true"
  data-g2-component="Tag"
>
  <span
    class="components-truncate wp-components-truncate components-text wp-components-text ic-7u3orf ic-1m45iq3 ic-192yz5d emotion-1"
    data-g2-c16t="true"
    data-g2-component="Text"
  >
    Status
  </span>
</span>
`;

exports[`props should render href 1`] = `
.emotion-0 {
  box-sizing: border-box;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  font-family: var(--wp-g2-font-family);
  font-size: var(--wp-g2-font-size);
  font-weight: var(--wp-g2-font-weight);
  margin: 0;
  border-radius: var(--wp-g2-control-border-radius);
  box-shadow: 0 0 0 1px var(--wp-g2-surface-border-color) inset;
  cursor: default;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 20px;
  line-height: 1;
  max-width: 120px;
  padding: 0 4px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  background: var(--wp-g2-dark-gray-rgba-20);
  color: var(--wp-g2-color-background-dark-gray-text);
}

@media (prefers-reduced-motion) {
  .emotion-0 {
    -webkit-transition: none!important;
    transition: none!important;
  }
}

[data-system-ui-reduced-motion-mode="true"] .emotion-0 {
  -webkit-transition: none!important;
  transition: none!important;
}

.emotion-1 {
  box-sizing: border-box;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  font-family: var(--wp-g2-font-family);
  font-size: var(--wp-g2-font-size);
  font-weight: var(--wp-g2-font-weight);
  margin: 0;
  display: block;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  color: var(--wp-g2-color-text);
  line-height: var(--wp-g2-font-line-height-base);
  color: currentColor;
  font-size: calc((13 / 13) * var(--wp-g2-font-size));
  font-weight: var(--wp-g2-font-weight);
  line-height: 1;
  display: block;
  padding: 3px 0;
}

@media (prefers-reduced-motion) {
  .emotion-1 {
    -webkit-transition: none!important;
    transition: none!important;
  }
}

[data-system-ui-reduced-motion-mode="true"] .emotion-1 {
  -webkit-transition: none!important;
  transition: none!important;
}

<a
  class="components-tag wp-components-tag ic-7lu7e0 ic-otytyz ic-192yz5d emotion-0"
  data-g2-c16t="true"
  data-g2-component="Tag"
  href="#"
>
  <span
    class="components-truncate wp-components-truncate components-text wp-components-text ic-7u3orf ic-1m45iq3 ic-192yz5d emotion-1"
    data-g2-c16t="true"
    data-g2-component="Text"
  >
    Status
  </span>
</a>
`;

exports[`props should render onRemove 1`] = `
.emotion-0 {
  box-sizing: border-box;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  font-family: var(--wp-g2-font-family);
  font-size: var(--wp-g2-font-size);
  font-weight: var(--wp-g2-font-weight);
  margin: 0;
  border-radius: var(--wp-g2-control-border-radius);
  box-shadow: 0 0 0 1px var(--wp-g2-surface-border-color) inset;
  cursor: default;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 20px;
  line-height: 1;
  max-width: 120px;
  padding: 0 4px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  background: var(--wp-g2-dark-gray-rgba-20);
  color: var(--wp-g2-color-background-dark-gray-text);
}

@media (prefers-reduced-motion) {
  .emotion-0 {
    -webkit-transition: none!important;
    transition: none!important;
  }
}

[data-system-ui-reduced-motion-mode="true"] .emotion-0 {
  -webkit-transition: none!important;
  transition: none!important;
}

.emotion-1 {
  box-sizing: border-box;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  font-family: var(--wp-g2-font-family);
  font-size: var(--wp-g2-font-size);
  font-weight: var(--wp-g2-font-weight);
  margin: 0;
  display: block;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  color: var(--wp-g2-color-text);
  line-height: var(--wp-g2-font-line-height-base);
  color: currentColor;
  font-size: calc((13 / 13) * var(--wp-g2-font-size));
  font-weight: var(--wp-g2-font-weight);
  line-height: 1;
  display: block;
  padding: 3px 0;
}

@media (prefers-reduced-motion) {
  .emotion-1 {
    -webkit-transition: none!important;
    transition: none!important;
  }
}

[data-system-ui-reduced-motion-mode="true"] .emotion-1 {
  -webkit-transition: none!important;
  transition: none!important;
}

<span
  class="components-tag wp-components-tag ic-7lu7e0 ic-otytyz ic-192yz5d emotion-0"
  data-g2-c16t="true"
  data-g2-component="Tag"
>
  <span
    class="components-truncate wp-components-truncate components-text wp-components-text ic-7u3orf ic-1m45iq3 ic-192yz5d emotion-1"
    data-g2-c16t="true"
    data-g2-component="Text"
  >
    Status
  </span>
</span>
`;

exports[`props should render removeButtonText 1`] = `
.emotion-0 {
  box-sizing: border-box;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  font-family: var(--wp-g2-font-family);
  font-size: var(--wp-g2-font-size);
  font-weight: var(--wp-g2-font-weight);
  margin: 0;
  border-radius: var(--wp-g2-control-border-radius);
  box-shadow: 0 0 0 1px var(--wp-g2-surface-border-color) inset;
  cursor: default;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 20px;
  line-height: 1;
  max-width: 120px;
  padding: 0 4px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  background: var(--wp-g2-dark-gray-rgba-20);
  color: var(--wp-g2-color-background-dark-gray-text);
}

@media (prefers-reduced-motion) {
  .emotion-0 {
    -webkit-transition: none!important;
    transition: none!important;
  }
}

[data-system-ui-reduced-motion-mode="true"] .emotion-0 {
  -webkit-transition: none!important;
  transition: none!important;
}

.emotion-1 {
  box-sizing: border-box;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  font-family: var(--wp-g2-font-family);
  font-size: var(--wp-g2-font-size);
  font-weight: var(--wp-g2-font-weight);
  margin: 0;
  display: block;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  color: var(--wp-g2-color-text);
  line-height: var(--wp-g2-font-line-height-base);
  color: currentColor;
  font-size: calc((13 / 13) * var(--wp-g2-font-size));
  font-weight: var(--wp-g2-font-weight);
  line-height: 1;
  display: block;
  padding: 3px 0;
}

@media (prefers-reduced-motion) {
  .emotion-1 {
    -webkit-transition: none!important;
    transition: none!important;
  }
}

[data-system-ui-reduced-motion-mode="true"] .emotion-1 {
  -webkit-transition: none!important;
  transition: none!important;
}

.emotion-2 {
  box-sizing: border-box;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  font-family: var(--wp-g2-font-family);
  font-size: var(--wp-g2-font-size);
  font-weight: var(--wp-g2-font-weight);
  margin: 0;
  margin-right: -4px;
}

@media (prefers-reduced-motion) {
  .emotion-2 {
    -webkit-transition: none!important;
    transition: none!important;
  }
}

[data-system-ui-reduced-motion-mode="true"] .emotion-2 {
  -webkit-transition: none!important;
  transition: none!important;
}

.emotion-3 {
  box-sizing: border-box;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  font-family: var(--wp-g2-font-family);
  font-size: var(--wp-g2-font-size);
  font-weight: var(--wp-g2-font-weight);
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  --wp-g2-flex-gap: calc(var(--wp-g2-grid-base) * 2);
  --wp-g2-flex-item-margin-bottom: 0;
  --wp-g2-flex-item-margin-right: var(--wp-g2-flex-gap);
  --wp-g2-flex-item-margin-left: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: transparent;
  border-color: transparent;
  border-radius: var(--wp-g2-control-border-radius);
  border-style: solid;
  border-width: 1px;
  box-shadow: 0 0 0 var(--wp-g2-control-box-shadow-focus-size) transparent;
  box-sizing: border-box;
  color: var(--wp-g2-color-text);
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: var(--wp-g2-font-size);
  height: auto;
  line-height: 1;
  min-height: var(--wp-g2-control-height);
  outline: none;
  padding-bottom: calc(var(--wp-g2-grid-base) * 1);
  padding-left: var(--wp-g2-control-padding-x);
  padding-right: var(--wp-g2-control-padding-x);
  padding-top: calc(var(--wp-g2-grid-base) * 1);
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  touch-action: manipulation;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: auto;
  padding-left: calc(var(--wp-g2-grid-base) * 0);
  padding-right: calc(var(--wp-g2-grid-base) * 0);
  text-align: center;
  color: var(--wp-g2-button-text-color);
  font-weight: 600;
  padding-left: var(--wp-g2-button-padding-x);
  padding-right: var(--wp-g2-button-padding-x);
  background-color: var(--wp-g2-button-tertiary-color);
  border-color: var(--wp-g2-button-tertiary-border-color);
  color: var(--wp-g2-button-tertiary-text-color);
  padding-left: var(--wp-g2-control-padding-x-small);
  padding-right: var(--wp-g2-control-padding-x-small);
  min-height: var(--wp-g2-control-height-x-small);
  border-color: var(--wp-g2-control-border-color-subtle);
  color: var(--wp-g2-color-text);
  padding: calc(var(--wp-g2-grid-base) * 0);
  color: currentColor;
}

@media (prefers-reduced-motion) {
  .emotion-3 {
    -webkit-transition: none!important;
    transition: none!important;
  }
}

[data-system-ui-reduced-motion-mode="true"] .emotion-3 {
  -webkit-transition: none!important;
  transition: none!important;
}

.emotion-3>*+*:not(marquee) {
  margin-left: calc(var(--wp-g2-grid-base) * 2);
}

.emotion-3>* {
  min-width: 0;
}

.emotion-3:hover,
.emotion-3:active,
.emotion-3:focus {
  -webkit-transition: all var(--wp-g2-transition-duration) cubic-bezier(0.12,0.8,0.32,1);
  transition: all var(--wp-g2-transition-duration) cubic-bezier(0.12,0.8,0.32,1);
}

.emotion-3[disabled]:not([aria-busy='true']),
.emotion-3[aria-disabled='true']:not([aria-busy='true']) {
  opacity: 0.5;
  cursor: auto;
}

.emotion-3:focus {
  box-shadow: var(--wp-g2-control-box-shadow-focus);
}

.emotion-3[data-destructive='true']:focus {
  box-shadow: var(--wp-g2-control-destructive-box-shadow-focus);
}

.emotion-3[data-icon='true'] {
  min-width: var(--wp-g2-control-height);
}

.emotion-3 svg {
  display: block;
}

.emotion-3:active {
  color: var(--wp-g2-button-text-color-active);
}

.emotion-3:hover {
  background-color: var(--wp-g2-button-tertiary-color-hover);
  border-color: var(--wp-g2-button-tertiary-border-color-hover);
}

.emotion-3:focus,
.emotion-3[data-focused='true'] {
  background-color: var(--wp-g2-button-tertiary-color-focus);
  border-color: var(--wp-g2-button-tertiary-border-color-focus);
  color: var(--wp-g2-button-tertiary-text-color-focus);
}

.emotion-3:active {
  background-color: var(--wp-g2-button-tertiary-color-active);
  border-color: var(--wp-g2-button-tertiary-border-color-active);
  color: var(--wp-g2-button-tertiary-text-color-active);
}

.emotion-3[data-destructive='true'] {
  color: var(--wp-g2-color-destructive);
}

.emotion-3[data-destructive='true']:hover,
.emotion-3[data-destructive='true']:focus {
  border-color: var(--wp-g2-color-destructive);
}

.emotion-3[data-destructive='true']:active {
  color: var(--wp-g2-color-text);
}

.emotion-3[data-icon='true'] {
  min-width: var(--wp-g2-control-height-x-small);
}

.emotion-3:hover,
.emotion-3:active,
.emotion-3:focus {
  border-color: var(--wp-g2-control-border-color-subtle);
  color: var(--wp-g2-color-text);
}

.emotion-3:focus {
  border-color: var(--wp-g2-button-primary-border-color-focus);
}

.emotion-3:hover,
.emotion-3:focus {
  color: currentColor;
}

.emotion-4 {
  box-sizing: border-box;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  font-family: var(--wp-g2-font-family);
  font-size: var(--wp-g2-font-size);
  font-weight: var(--wp-g2-font-weight);
  margin: 0;
  display: block;
  max-height: 100%;
  max-width: 100%;
  min-height: 0;
  min-width: 0;
  display: var(--wp-g2-flex-item-display);
  opacity: 1;
}

@media (prefers-reduced-motion) {
  .emotion-4 {
    -webkit-transition: none!important;
    transition: none!important;
  }
}

[data-system-ui-reduced-motion-mode="true"] .emotion-4 {
  -webkit-transition: none!important;
  transition: none!important;
}

.emotion-4 svg {
  display: block;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.emotion-5 {
  box-sizing: border-box;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  font-family: var(--wp-g2-font-family);
  font-size: var(--wp-g2-font-size);
  font-weight: var(--wp-g2-font-weight);
  margin: 0;
  display: block;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: currentColor;
  fill: currentColor;
  height: 12px;
  width: 12px;
}

@media (prefers-reduced-motion) {
  .emotion-5 {
    -webkit-transition: none!important;
    transition: none!important;
  }
}

[data-system-ui-reduced-motion-mode="true"] .emotion-5 {
  -webkit-transition: none!important;
  transition: none!important;
}

.emotion-5 svg {
  display: block;
}

.emotion-6 {
  box-sizing: border-box;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  font-family: var(--wp-g2-font-family);
  font-size: var(--wp-g2-font-size);
  font-weight: var(--wp-g2-font-weight);
  margin: 0;
  background: transparent;
  display: block;
  margin: 0!important;
  pointer-events: none;
  position: absolute;
  will-change: box-shadow;
  border-radius: inherit;
  bottom: -1px;
  box-shadow: 0 0px 0px 0 rgba(0 ,0,0,0);
  opacity: var(--wp-g2-elevation-intensity);
  left: -1px;
  right: -1px;
  top: -1px;
  -webkit-transition: box-shadow var(--wp-g2-transition-duration) var(--wp-g2-transition-timing-function);
  transition: box-shadow var(--wp-g2-transition-duration) var(--wp-g2-transition-timing-function);
}

@media (prefers-reduced-motion) {
  .emotion-6 {
    -webkit-transition: none!important;
    transition: none!important;
  }
}

[data-system-ui-reduced-motion-mode="true"] .emotion-6 {
  -webkit-transition: none!important;
  transition: none!important;
}

<span
  class="components-tag wp-components-tag ic-7lu7e0 ic-otytyz ic-192yz5d emotion-0"
  data-g2-c16t="true"
  data-g2-component="Tag"
>
  <span
    class="components-truncate wp-components-truncate components-text wp-components-text ic-7u3orf ic-1m45iq3 ic-192yz5d emotion-1"
    data-g2-c16t="true"
    data-g2-component="Text"
  >
    Status
  </span>
  <div
    class="ic-1blhbvo ic-192yz5d emotion-2"
    data-g2-component="TagRemoveButtonWrapper"
  >
    <button
      aria-busy="false"
      aria-label="Remove"
      class="components-flex wp-components-flex ic-17cs4ki components-base-button wp-components-base-button components-button wp-components-button components-close-button wp-components-close-button ic-pztd8e ic-i0z4gr ic-1d6ec17 ic-192yz5d emotion-3"
      data-active="false"
      data-destructive="false"
      data-focused="false"
      data-g2-c16t="true"
      data-g2-component="TagRemoveButton"
      data-icon="true"
      title="Remove"
      type="button"
    >
      <span
        class="components-flex-item wp-components-flex-item ic-1p3tlc8 ic-192yz5d emotion-4"
        data-g2-c16t="true"
        data-g2-component="ButtonIcon"
      >
        <div
          class="components-icon wp-components-icon ic-2q44rw ic-192yz5d emotion-5"
          data-g2-c16t="true"
          data-g2-component="Icon"
        >
          <svg
            aria-hidden="true"
            focusable="false"
            height="12"
            role="img"
            size="12"
            viewBox="0 0 24 24"
            width="12"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M13 11.8l6.1-6.3-1-1-6.1 6.2-6.1-6.2-1 1 6.1 6.3-6.5 6.7 1 1 6.5-6.6 6.5 6.6 1-1z"
            />
          </svg>
        </div>
      </span>
      <span
        class="components-elevation wp-components-elevation ic-i1zzlu ic-192yz5d emotion-6"
        data-g2-c16t="true"
        data-g2-component="ButtonElevation"
      />
    </button>
  </div>
</span>
`;
